Issue #313 fix for browse-by-topic element width issues on IE

--- a/docroot/sites/all/themes/informea.theme/css/style-from-less.css
+++ b/docroot/sites/all/themes/informea.theme/css/style-from-less.css
@@ -1788,17 +1788,17 @@
   }
 }
 #block-informea-frontpage-topics .links > li {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  min-width: 150px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1;
+          flex: 0 1;
+  min-width: 100px;
 }
-@media screen and (max-width: 767px) {
+@media (min-width: 480px) {
   #block-informea-frontpage-topics .links > li {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1;
-            flex: 0 1;
-    min-width: 100px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    min-width: 150px;
   }
 }
 #block-informea-frontpage-topics .links > li > a {
