--- a/docroot/sites/all/themes/informea.theme/less/pages/front.less
+++ b/docroot/sites/all/themes/informea.theme/less/pages/front.less
@@ -30,11 +30,11 @@
     }
 
     > li {
-      flex: 1;
-      min-width: 150px;
-      @media @grid-mobile {
-        flex: 0 1;
-        min-width: 100px;
+      flex: 0 1;
+      min-width: 100px;
+      @media (min-width: @screen-xs-min) {
+        flex: 1;
+        min-width: 150px;
       }
 
     }
